--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.4.2
   cloud_firestore: ^5.6.3
   flutter_launcher_icons: ^0.14.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
